# basics-of-opengl33-and-qt6

./: README.md
simple-triangle-opengl33-qt6-cpp/: CMakeLists.txt
simple-triangle-opengl33-qt6-cpp/src/: main.cpp  mainwindow.cpp  mainwindow.h
transformed-triangle-opengl33-qt6-cpp/: CMakeLists.txt
transformed-triangle-opengl33-qt6-cpp/src/: main.cpp  mainwindow.cpp  mainwindow.h
